<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_PFCA7_OutputProcessData" Id="{ead8186d-17e9-0d1e-2402-b9afe7954a6b}">
    <Declaration><![CDATA[TYPE ST_PFCA7_OutputProcessData :
STRUCT
	CommandedFlowRate	: UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>